# calpe-digital

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: active.md  decisions.md
docs/reference/: brand-strategy.md  event-2-cowork-feb12.md  event1-copy.md  event1-draft-copy.md  event1-registrations.csv  facebook-posts.md  members.csv  stripe-customers.csv  transcript-brand-planning.md  transcript-community-structure.md  transcript-event1-planning.md
memory/: calpe-digital-active.md  calpe-digital-decisions.md  calpe-digital-memory.md
